--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <tr class="field"><th class="field-name">Creation date:</th><td class="field-body"><p class="first">Saturday, May 2, 2020</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Lastly updated:</th><td class="field-body"><p class="first">Saturday, July 18, 2020</p>
+<tr class="field"><th class="field-name">Lastly updated:</th><td class="field-body"><p class="first">Thursday, August 13, 2020</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Status:</th><td class="field-body"><p class="first">Work in progress</p>
 </td>
 </tr>
-<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.0.2</p>
+<tr class="field"><th class="field-name">Version:</th><td class="field-body"><p class="first">0.0.3</p>
 </td>
 </tr>
 <tr class="field"><th class="field-name">Dedication:</th><td class="field-body"><p class="first">Users and maintainers of the <tt class="docutils literal"><span class="pre">US-Common</span></tt> layer.</p>
@@ -165,6 +165,7 @@ $ make class_USScheduler_run
 $ <span class="nb">cd</span> <span class="nb">test</span> <span class="o">&amp;&amp;</span> make us_common_otp_application_run <span class="nv">CMD_LINE_OPT</span><span class="o">=</span><span class="s2">&quot;--batch&quot;</span>
 </pre>
 <p>All relevant OTP applications shall be started in turn, US-Common shall then be ready for use, until all these applications are orderly shutdown.</p>
+<p>One may run <tt class="docutils literal">make <span class="pre">create-us-common-checkout</span></tt> in order to create, based on our conventions, a suitable <tt class="docutils literal">_checkouts</tt> directory so that rebar3 can directly take into account local, directly available (in-development) dependencies (here, Myriad, WOOPER and Traces).</p>
 </div>
 </div>
 <div class="section" id="support">
