--- a/api-doc/class_USScheduler.html
+++ b/api-doc/class_USScheduler.html
@@ -106,8 +106,8 @@
 <p> A millisecond-based offset relative to the start time of this scheduler (hence
  designed to be rather small).</p>
 
-<h3 class="typedecl"><a name="type-server_pid">server_pid()</a></h3>
-<p><tt>server_pid() = <a href="class_UniversalServer.html#type-server_pid">class_UniversalServer:server_pid()</a></tt></p>
+<h3 class="typedecl"><a name="type-scheduler_pid">scheduler_pid()</a></h3>
+<p><tt>scheduler_pid() = <a href="class_UniversalServer.html#type-server_pid">class_UniversalServer:server_pid()</a></tt></p>
 
 
 <h3 class="typedecl"><a name="type-start_time">start_time()</a></h3>
