US-Common doc updated.

--- a/api-doc/class_USScheduler.html
+++ b/api-doc/class_USScheduler.html
@@ -121,7 +121,8 @@ WOOPER oneway, i.e. OnewayName or {OnewayName, Args}, where Args is
 conventionally a single non-list term or a list of any arguments.</p>
 
  We considered, yet finally did not keep, the idea of always adding as last
- element the PID of the sending scheduler.</p>
+ element the PID of the sending scheduler. So specified commands are simply
+ sent verbatim to their actuators.</p>
 
 <h3 class="typedecl"><a name="type-task_id">task_id()</a></h3>
 <p><tt>task_id() = <a href="basic_utils.html#type-count">basic_utils:count()</a></tt></p>
