US-Common doc updated.

--- a/api-doc/class_USScheduler.html
+++ b/api-doc/class_USScheduler.html
@@ -194,7 +194,7 @@ conventionally a single non-list term or a list of any arguments.</p>
 <tr><td valign="top"><a href="#subtractFromAttribute-3">subtractFromAttribute/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#swapInAttribute-3">swapInAttribute/3</a></td><td></td></tr>
 <tr><td valign="top"><a href="#toggleAttribute-2">toggleAttribute/2</a></td><td></td></tr>
-<tr><td valign="top"><a href="#vet_user_periodicity-2">vet_user_periodicity/2</a></td><td>Returns a vetted periodicity.</td></tr>
+<tr><td valign="top"><a href="#vet_user_periodicity-2">vet_user_periodicity/2</a></td><td>Returns a vetted, internal periodicity.</td></tr>
 <tr><td valign="top"><a href="#wooper_destruct-1">wooper_destruct/1</a></td><td></td></tr>
 <tr><td valign="top"><a href="#wooper_effective_method_execution-4">wooper_effective_method_execution/4</a></td><td></td></tr>
 <tr><td valign="top"><a href="#wooper_execute_method-3">wooper_execute_method/3</a></td><td></td></tr>
@@ -455,7 +455,7 @@ conventionally a single non-list term or a list of any arguments.</p>
 <div class="spec">
 <p><tt>vet_user_periodicity(UserPeriodicity::term(), State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="#type-ms_duration">ms_duration()</a></tt><br></p>
 <p> </p>
-</div><p><p>Returns a vetted periodicity.</p>
+</div><p><p>Returns a vetted, internal periodicity.</p>
 
  (helper, defined for reuse)
 </p>
