--- a/api-doc/class_USConfigServer.html
+++ b/api-doc/class_USConfigServer.html
@@ -35,6 +35,10 @@
 <p><tt>classname() = <a href="wooper.html#type-classname">wooper:classname()</a></tt></p>
 
 
+<h3 class="typedecl"><a name="type-config_server_pid">config_server_pid()</a></h3>
+<p><tt>config_server_pid() = <a href="#type-server_pid">server_pid()</a></tt></p>
+
+
 <h3 class="typedecl"><a name="type-instance_pid">instance_pid()</a></h3>
 <p><tt>instance_pid() = pid()</tt></p>
 
@@ -83,6 +87,10 @@
 <p><tt>requests_outcome() = <a href="wooper.html#type-requests_outcome">wooper:requests_outcome()</a></tt></p>
 
 
+<h3 class="typedecl"><a name="type-server_pid">server_pid()</a></h3>
+<p><tt>server_pid() = <a href="class_UniversalServer.html#type-server_pid">class_UniversalServer:server_pid()</a></tt></p>
+
+
 <h2><a name="index">Function Index</a></h2>
 <table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#addKeyValueToAttribute-4">addKeyValueToAttribute/4</a></td><td></td></tr>
 <tr><td valign="top"><a href="#addToAttribute-3">addToAttribute/3</a></td><td></td></tr>
@@ -109,6 +117,10 @@
 <tr><td valign="top"><a href="#getAttribute-2">getAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#getAttributes-2">getAttributes/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#get_execution_target-0">get_execution_target/0</a></td><td></td></tr>
+<tr><td valign="top"><a href="#get_us_config_server-1">get_us_config_server/1</a></td><td>Returns the PID of the US configuration server, creating it if ever 
+necessary.</td></tr>
+<tr><td valign="top"><a href="#get_us_config_server-2">get_us_config_server/2</a></td><td>Returns the PID of the US configuration server, creating it if ever 
+necessary and if enabled.</td></tr>
 <tr><td valign="top"><a href="#hasAttribute-2">hasAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#incrementAttribute-2">incrementAttribute/2</a></td><td></td></tr>
 <tr><td valign="top"><a href="#is_wooper_debug-0">is_wooper_debug/0</a></td><td></td></tr>
@@ -286,6 +298,34 @@
 <p><tt>get_execution_target() -&gt; development</tt><br></p>
 <p> </p>
 </div>
+
+<h3 class="function"><a name="get_us_config_server-1">get_us_config_server/1</a></h3>
+<div class="spec">
+<p><tt>get_us_config_server(State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="#type-config_server_pid">config_server_pid()</a></tt><br></p>
+<p> </p>
+</div><p><p>Returns the PID of the US configuration server, creating it if ever 
+necessary.</p>
+
+ <p>Centralised here on behalf of clients (ex: US-Main, US-Web, etc.).</p>
+
+ This is an helper function, not a static method, as a trace emitter state
+ shall be specified as parameter, so that traces can be sent in all cases
+ needed.
+</p>
+
+<h3 class="function"><a name="get_us_config_server-2">get_us_config_server/2</a></h3>
+<div class="spec">
+<p><tt>get_us_config_server(CreateIfNeeded::boolean(), State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; <a href="#type-config_server_pid">config_server_pid()</a></tt><br></p>
+<p> </p>
+</div><p><p>Returns the PID of the US configuration server, creating it if ever 
+necessary and if enabled.</p>
+
+ <p>Centralised here on behalf of clients (ex: US-Main, US-Web, etc.).</p>
+
+ This is an helper function, not a static method, as a trace emitter state
+ shall be specified as parameter, so that traces can be sent in all cases
+ needed.
+</p>
 
 <h3 class="function"><a name="hasAttribute-2">hasAttribute/2</a></h3>
 <div class="spec">
