--- a/api-doc/us_common_sup.html
+++ b/api-doc/us_common_sup.html
@@ -10,7 +10,7 @@
 <hr>
 
 <h1>Module us_common_sup</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Module implementing the <b>root OTP supervisor of US-Common</b>.
+<ul class="index"><li><a href="#description">Description</a></li><li><a href="#types">Data Types</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Module implementing the <b>root OTP supervisor of US-Common</b>.
 
 <p><b>Behaviours:</b> <a href="supervisor.html"><tt>supervisor</tt></a>.</p>
 
@@ -19,6 +19,12 @@
  In practice, it will supervise a single process, the one of the (singleton) US
  configuration server, through a dedicated supervision bridge, defined in the
  us_common_bridge_sup module.
+
+<h2><a name="types">Data Types</a></h2>
+
+<h3 class="typedecl"><a name="type-child_spec">child_spec()</a></h3>
+<p><tt>child_spec() = <a href="http://www.erlang.org/edoc/doc/stdlib/doc/supervisor.html#type-child_spec">supervisor:child_spec()</a></tt></p>
+
 
 <h2><a name="index">Function Index</a></h2>
 <table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#init-1">init/1</a></td><td>Callback to initialise this US-Common root supervisor bridge, typically
@@ -31,7 +37,7 @@ supervision bridge.</td></tr>
 
 <h3 class="function"><a name="init-1">init/1</a></h3>
 <div class="spec">
-<p><tt>init(Args::list()) -&gt; {ok, {<a href="http://www.erlang.org/edoc/doc/stdlib/doc/supervisor.html#type-sup_flags">supervisor:sup_flags()</a>, [<a href="http://www.erlang.org/edoc/doc/stdlib/doc/supervisor.html#type-child_spec">supervisor:child_spec()</a>]}} | ignore</tt><br></p>
+<p><tt>init(Args::list()) -&gt; {ok, {<a href="http://www.erlang.org/edoc/doc/stdlib/doc/supervisor.html#type-sup_flags">supervisor:sup_flags()</a>, [<a href="#type-child_spec">child_spec()</a>]}}</tt><br></p>
 <p> </p>
 </div><p>Callback to initialise this US-Common root supervisor bridge, typically
  in answer to start_link/0 above being executed.
