--- a/api-doc/class_USConfigServer.html
+++ b/api-doc/class_USConfigServer.html
@@ -39,6 +39,10 @@
 <p><tt>config_server_pid() = <a href="#type-server_pid">server_pid()</a></tt></p>
 <p> The PID of a US-Config server.</p>
 
+<h3 class="typedecl"><a name="type-epmd_origin">epmd_origin()</a></h3>
+<p><tt>epmd_origin() = as_default | explicit_set</tt></p>
+<p> An EPMD port was explicitly set in the configuration of</p>
+
 <h3 class="typedecl"><a name="type-instance_pid">instance_pid()</a></h3>
 <p><tt>instance_pid() = pid()</tt></p>
 
@@ -80,7 +84,7 @@
 
 
 <h3 class="typedecl"><a name="type-request_return">request_return()</a></h3>
-<p><tt>request_return(T) = <a href="wooper.html#type-request_result">wooper:request_result</a>(T)</tt></p>
+<p><tt>request_return(T) = <a href="wooper.html#type-request_return">wooper:request_return</a>(T)</tt></p>
 
 
 <h3 class="typedecl"><a name="type-requests_outcome">requests_outcome()</a></h3>
@@ -88,8 +92,12 @@
 
 
 <h3 class="typedecl"><a name="type-server_pid">server_pid()</a></h3>
-<p><tt>server_pid() = <a href="class_UniversalServer.html#type-server_pid">class_UniversalServer:server_pid()</a></tt></p>
+<p><tt>server_pid() = <a href="class_USServer.html#type-server_pid">class_USServer:server_pid()</a></tt></p>
 
+
+<h3 class="typedecl"><a name="type-us_config_table">us_config_table()</a></h3>
+<p><tt>us_config_table() = <a href="#type-table">table</a>(atom(), term())</tt></p>
+<p> A table holding US configuration information.</p>
 
 <h2><a name="index">Function Index</a></h2>
 <table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#addKeyValueToAttribute-4">addKeyValueToAttribute/4</a></td><td></td></tr>
@@ -309,7 +317,7 @@ necessary and if enabled.</td></tr>
 </div><p><p>Returns the PID of the US configuration server, creating it if ever 
 necessary.</p>
 
- <p>Centralised here on behalf of clients (ex: US-Main, US-Web, etc.).</p>
+ <p>Centralised here on behalf of clients (e.g. US-Main, US-Web, etc.).</p>
 
  This is an helper function, not a static method, as a trace emitter state
  shall be specified as parameter, so that traces can be sent in all cases
@@ -323,7 +331,7 @@ necessary.</p>
 </div><p><p>Returns the PID of the US configuration server, creating it if ever 
 necessary and if enabled.</p>
 
- <p>Centralised here on behalf of clients (ex: US-Main, US-Web, etc.).</p>
+ <p>Centralised here on behalf of clients (e.g. US-Main, US-Web, etc.).</p>
 
  This is an helper function, not a static method, as a trace emitter state
  shall be specified as parameter, so that traces can be sent in all cases
@@ -410,7 +418,7 @@ necessary and if enabled.</p>
 
 <h3 class="function"><a name="wooper_execute_method_as-4">wooper_execute_method_as/4</a></h3>
 <div class="spec">
-<p><tt>wooper_execute_method_as(Classname::<a href="#type-classname">classname()</a>, MethodAtom::<a href="#type-method_name">method_name()</a>, Parameters::<a href="#type-method_arguments">method_arguments()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; {<a href="wooper.html#type-state">wooper:state()</a>, <a href="#type-method_internal_result">method_internal_result()</a>}</tt><br></p>
+<p><tt>wooper_execute_method_as(ParentClassname::<a href="#type-classname">classname()</a>, MethodAtom::<a href="#type-method_name">method_name()</a>, Parameters::<a href="#type-method_arguments">method_arguments()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; {<a href="wooper.html#type-state">wooper:state()</a>, <a href="#type-method_internal_result">method_internal_result()</a>}</tt><br></p>
 <p> </p>
 </div>
 
