--- a/api-doc/class_USScheduler.html
+++ b/api-doc/class_USScheduler.html
@@ -81,6 +81,13 @@
 <p><tt>oneway_return() = <a href="wooper.html#type-oneway_return">wooper:oneway_return()</a></tt></p>
 
 
+<h3 class="typedecl"><a name="type-periodicity">periodicity()</a></h3>
+<p><tt>periodicity() = <a href="#type-maybe">maybe</a>(<a href="#type-ms_duration">ms_duration()</a>)</tt></p>
+<p><p> Time between two schedulings of a task, as used internally.</p>
+
+ Not to be mixed up with user periodicities, which are significantly coarser
+ than internal ones.</p>
+
 <h3 class="typedecl"><a name="type-request_name">request_name()</a></h3>
 <p><tt>request_name() = <a href="wooper.html#type-request_name">wooper:request_name()</a></tt></p>
 
@@ -94,7 +101,7 @@
 
 
 <h3 class="typedecl"><a name="type-request_return">request_return()</a></h3>
-<p><tt>request_return(T) = <a href="wooper.html#type-request_result">wooper:request_result</a>(T)</tt></p>
+<p><tt>request_return(T) = <a href="wooper.html#type-request_return">wooper:request_return</a>(T)</tt></p>
 
 
 <h3 class="typedecl"><a name="type-requester_pid">requester_pid()</a></h3>
@@ -105,13 +112,17 @@
 <p><tt>requests_outcome() = <a href="wooper.html#type-requests_outcome">wooper:requests_outcome()</a></tt></p>
 
 
+<h3 class="typedecl"><a name="type-schedule_count">schedule_count()</a></h3>
+<p><tt>schedule_count() = unlimited | <a href="#type-count">count()</a></tt></p>
+<p> The number of times a task shall be scheduled.</p>
+
 <h3 class="typedecl"><a name="type-schedule_offset">schedule_offset()</a></h3>
 <p><tt>schedule_offset() = <a href="#type-ms_since_start">ms_since_start()</a></tt></p>
 <p> A millisecond-based offset relative to the start time of this scheduler (hence
  designed to be rather small).</p>
 
 <h3 class="typedecl"><a name="type-scheduler_pid">scheduler_pid()</a></h3>
-<p><tt>scheduler_pid() = <a href="class_UniversalServer.html#type-server_pid">class_UniversalServer:server_pid()</a></tt></p>
+<p><tt>scheduler_pid() = <a href="class_USServer.html#type-server_pid">class_USServer:server_pid()</a></tt></p>
 
 
 <h3 class="typedecl"><a name="type-seconds">seconds()</a></h3>
@@ -467,7 +478,7 @@ conventionally a single non-list term or a list of any arguments.</p>
 
 <h3 class="function"><a name="wooper_execute_method_as-4">wooper_execute_method_as/4</a></h3>
 <div class="spec">
-<p><tt>wooper_execute_method_as(Classname::<a href="#type-classname">classname()</a>, MethodAtom::<a href="#type-method_name">method_name()</a>, Parameters::<a href="#type-method_arguments">method_arguments()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; {<a href="wooper.html#type-state">wooper:state()</a>, <a href="#type-method_internal_result">method_internal_result()</a>}</tt><br></p>
+<p><tt>wooper_execute_method_as(ParentClassname::<a href="#type-classname">classname()</a>, MethodAtom::<a href="#type-method_name">method_name()</a>, Parameters::<a href="#type-method_arguments">method_arguments()</a>, State::<a href="wooper.html#type-state">wooper:state()</a>) -&gt; {<a href="wooper.html#type-state">wooper:state()</a>, <a href="#type-method_internal_result">method_internal_result()</a>}</tt><br></p>
 <p> </p>
 </div>
 
