US-Common doc updated.

--- a/api-doc/us_common_app.html
+++ b/api-doc/us_common_app.html
@@ -13,7 +13,7 @@
 <ul class="index"><li><a href="#description">Description</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Module implementing the <b>US-Common (active) OTP application
  behaviour</b>.
 
-<p><b>Behaviours:</b> <a href="application.html"><tt>application</tt></a>.</p>
+<p><b>Behaviours:</b> <a href="application.html"><code>application</code></a>.</p>
 
 <h2><a name="description">Description</a></h2>Module implementing the <b>US-Common (active) OTP application
  behaviour</b>.
@@ -27,13 +27,13 @@
 
 <h3 class="function"><a name="start-2">start/2</a></h3>
 <div class="spec">
-<p><tt>start(Type::<a href="http://www.erlang.org/edoc/doc/kernel/doc/application.html#type-start_type">application:start_type()</a>, StartArgs::term()) -&gt; {ok, pid()} | {ok, pid(), State::term()} | {error, Reason::term()}</tt><br></p>
+<p><code>start(Type::<a href="http://www.erlang.org/edoc/doc/kernel/doc/application.html#type-start_type">application:start_type()</a>, StartArgs::term()) -&gt; {ok, pid()} | {ok, pid(), State::term()} | {error, Reason::term()}</code><br></p>
 <p> </p>
 </div><p>Starts the US-Common services.</p>
 
 <h3 class="function"><a name="stop-1">stop/1</a></h3>
 <div class="spec">
-<p><tt>stop(State::term()) -&gt; <a href="#type-void">void()</a></tt><br></p>
+<p><code>stop(State::term()) -&gt; <a href="#type-void">void()</a></code><br></p>
 <p> </p>
 </div><p>Stops the US-Common services.</p>
 <hr>
