--- a/api-doc/overview-summary.html
+++ b/api-doc/overview-summary.html
@@ -12,9 +12,9 @@
 </h1>
 <p>Copyright © 2021 Olivier Boudeville
 </p>
-<p><b>Version:</b> API 0.1.1
+<p><b>Version:</b> API 0.1.3
 </p>
-<p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><tt>olivier (dot) boudeville (at) esperide (dot) com</tt></a>).</p>
+<p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><code>olivier (dot) boudeville (at) esperide (dot) com</code></a>).</p>
 <p><b>References</b><ul><li>See the <a href="http://us-common.esperide.org" target="_blank">US-Common official website</a> or <a href="https://olivier-boudeville.github.io/us-common/index.html" target="_blank">its mirror</a>
 </li><li>In terms of dependency, for additional information one may refer to:
 <ul>
@@ -34,7 +34,7 @@
 The <code>US-Common layer</code>, part of the <a href="https://us.esperide.org/" target="_blank">Universal Server</a> project, is to provide base elements on which the various <b>Universal Services</b> are built.
 </p>
 
-<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of US-Common version 0.1.1 (as of Wednesday, February 22, 2023).
+<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of US-Common version 0.1.3 (as of Thursday, January 4, 2024).
 </p>
 
 
