--- a/api-doc/overview-summary.html
+++ b/api-doc/overview-summary.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Welcome to the documentation of the US-Common API
+<title>Welcome to the official documentation of the US-Common API
 </title>
 <link rel="stylesheet" type="text/css" href="stylesheet.css" title="EDoc">
 </head>
 <body bgcolor="white">
 <div class="navbar"><a name="#navbar_top"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
-<h1>Welcome to the documentation of the US-Common API
+<h1>Welcome to the official documentation of the US-Common API
 </h1>
-<p>Copyright © 2021 Olivier Boudeville
+<p>Copyright © 2024 Olivier Boudeville
 </p>
-<p><b>Version:</b> API 0.1.3
+<p><b>Version:</b> 0.1.5
 </p>
 <p><b>Authors:</b> Olivier Boudeville (<a href="mailto:olivier (dot) boudeville (at) esperide (dot) com"><code>olivier (dot) boudeville (at) esperide (dot) com</code></a>).</p>
 <p><b>References</b><ul><li>See the <a href="http://us-common.esperide.org" target="_blank">US-Common official website</a> or <a href="https://olivier-boudeville.github.io/us-common/index.html" target="_blank">its mirror</a>
@@ -34,7 +34,7 @@
 The <code>US-Common layer</code>, part of the <a href="https://us.esperide.org/" target="_blank">Universal Server</a> project, is to provide base elements on which the various <b>Universal Services</b> are built.
 </p>
 
-<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of US-Common version 0.1.3 (as of Thursday, January 4, 2024).
+<p>This website presents the documentation of the API (<em>Application Programming Interface</em>) of US-Common version 0.1.5 (as of Sunday, January 14, 2024).
 </p>
 
 
